changes in notification view and stopping audio using pending intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ForegroundServiceApp</string>
     <string name="song_name">SongName</string>
+    <string name="title">Audio is Playing</string>
+    <string name="Content">"Audio Name: "</string>
+    <string name="stop_audio">Stop Audio</string>
 </resources>
